examples/test/testpolicy7728.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7728
  namespace: namespace269
spec:
  podSelector:
    matchLabels:
      key11: value22
      key42: value28
      key23: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value46
          key14: value21
          key20: value5
      podSelector:
        matchLabels:
          key38: value21
          key19: value29
          key12: value14
